# emacs-init

./: .bash_profile  .dir-locals.el  .gitattributes  .gitignore  .gitmodules  Makefile  auto-complete.el  byte-compile.bat  byte-compile.el  byte-compile.sh  cc-mode.econf  cc-mode.el  cedet-win-projects.el  cedet.econf  cedet.el  coding.econf  coding.el  color-theme.el  compile.econf  config.econf  config.el  csharp-mode.el  csharp.el  custom-template.el  custom.el  cygwin-mount.econf  cygwin-mount.el  desktop.el  dired.el  ecb.econf  ecb.el  ediff.econf  egg.econf  egg.el  emacs-lisp-mode.el  emacs.econf  emacs.el  emacs.js.el  emms.econf  emms.el  (+247 more)
init-skeletor-projects/cmake-project/: CMakeLists.txt
init-skeletor-projects/cmake-project-swig/src/: CMakeLists.txt
init-skeletor-projects/conan-app/: conanfile.txt  configure.bat
init-skeletor-projects/conan-lib/: CMakeLists.txt  configure.bat
init-skeletor-projects/skewer-index-html-package/: index.html
init-skeletor-projects/swig-cmake-project/: CMakeLists.txt  sample.cpp  sample.i
misc/init-skeletor-projects/cmake-project-swig/src/: sample.h
misc/init-skeletor-projects/cmake-startup-project/: .dir-locals.el  CMakeLists.txt
misc/init-skeletor-projects/cmake-startup-project/src/: main.c
misc/init-skeletor-projects/conan-app/: CMakeLists.txt  conanfile.txt  install.bat
misc/init-skeletor-projects/conan-lib/: CMakeLists.txt  configure.bat
misc/init-skeletor-projects/conan-lib/include/: lib.h  lib.hpp
misc/init-skeletor-projects/conan-lib/src/: lib.cpp
misc/init-skeletor-projects/conan-lib/tests/: lib_test.cpp
misc/init-skeletor-projects/conan-meson-app/: INSTALL.org  meson.build
misc/init-skeletor-projects/conan-meson-lib/: INSTALL.org
misc/init-skeletor-projects/conan-meson-lib/include/: meson.build
misc/init-skeletor-projects/conan-meson-lib/test/: meson.build
misc/init-skeletor-projects/conan-swig-app/: CMakeLists.txt  conanfile.txt  configure.bat  install.bat
misc/init-skeletor-projects/conan-swig-app/cmake/: FindLinphone.cmake
misc/init-skeletor-projects/conan-swig-app/include/: lib.h
misc/init-skeletor-projects/conan-swig-app/scripts/: test.lua
misc/init-skeletor-projects/conan-swig-app/src/: lib.cpp  lib.i  lib_wrap.cxx  main.cpp
misc/init-skeletor-projects/conan-swig-app/test/: main.cpp
misc/init-skeletor-projects/conan-swig-lib/: CMakeLists.txt  conanfile.txt  configure.bat
misc/init-skeletor-projects/conan-swig-lib/src/: lib.i
misc/init-skeletor-projects/conan-swig-lib/tests/: lib_test.cpp
misc/init-skeletor-projects/cpp-doctest-starter/: makefile.inc
misc/init-skeletor-projects/cpp-starter/: main.cpp  makefile  makefile.inc
misc/init-skeletor-projects/makefile-project/: main.c
misc/skeletor-projects/conan-app/: CMakeLists.txt  INSTALL.org  conandata.yml  conanfile.py
misc/skeletor-projects/conan-meson-app/: INSTALL.org  conanfile.py  conanfile.txt  meson.build
misc/skeletor-projects/conan-meson-app/include/: lib.h  meson.build
misc/skeletor-projects/conan-meson-app/lib/: lib.cpp  meson.build
misc/skeletor-projects/conan-meson-app/src/: main.cpp  meson.build
misc/skeletor-projects/conan-meson-app/tests/: main_test.cpp  meson.build
misc/skeletor-projects/conan-meson-lib/: conanfile.txt  meson.build
misc/skeletor-projects/conan-meson-lib/include/: lib.h
misc/skeletor-projects/conan-meson-lib/src/: meson.build
misc/skeletor-projects/conan-swig-app/: README.md
misc/skeletor-projects/conan-swig-app/include/: lib.h
misc/skeletor-projects/conan-swig-app/src/: lib.cpp  lib.i
misc/skeletor-projects/conan-swig-app/test/: main.cpp
misc/skeletor-projects/conan-swig-lib/src/: lib.cpp
misc/skeletor-projects/cpp-doctest-starter/: main.cpp
misc/skeletor-projects/makefile-project/: makefile  makefile.inc
misc/skeletor-projects/skewer-index-html-package/: index.html
misc/skeletor-projects/vcpkg-app/: CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
site-lisp/: .gitignore  subdirs.el
templates/: cedet-projects-template.el
